renderer/styles/chat.module.css
.wrapper {
    width: 100%;
    height: 100%;
    display: flex;
}

.sidebar {
    width: 150px;
    height: 100%;
    background: #f5f5f5;
    display: flex;
    flex-direction: column;
}

.sidebar_header {
    width: 100%;
    overflow: auto;
    height: 40px;
}

.sidebar_header form {
    width: 100%;
    height: 100%;
}

.sidebar_header input {
    width: calc(100% - 20px);
    height: calc(100% - 10px);
    padding: 5px 10px;
    border: none;
}

.sidebar h2 {
    height: 20px;
    margin: 10px 10px;
}

.sidebar_content {
    padding: 0;
    width: 100%;
}

.sidebar_content ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    border-top: 1px solid #ccc;
}

.sidebar_content li {
    cursor: pointer;
    padding: 10px;
    border-bottom: 1px solid #ccc;
}

.sidebar_content li:hover {
    background: #eee;
}

.sidebar_content li.selected {
    background: #ddd;
}

.sidebar_footer {
    padding: 10px;
    width: calc(100% - 20px);
    margin-top: auto;
}

.sidebar_footer button {
    cursor: pointer;
}

.sidebar_handle {
    margin-left: -4px;
    width: 4px;
    height: 100%;
    cursor: col-resize;
    border-right: 1px solid #555;
}

.content {
    flex-grow: 1;
    height: 100%;
    vertical-align: top;
}

.content_header {
    width: 100%;
    overflow: auto;
    height: 40px;
    display: flex;
    flex-direction: row;
}

.content_header .content_header_left {
    flex: 1;
}

.content_header_left h2 {
    padding: 3px 10px 0;
    margin: 0;
}

.content_header_left a {
    padding: 0 10px;
    margin: 0;
    color: #555;
}

.content_header_buttons {
    padding: 5px 10px;
}

.content_header_buttons button {
    cursor: pointer;
}

.posts {
    width: 100%;
    height: calc(100% - 81px);
    display: flex;
    flex-direction: column-reverse;
    overflow-y: auto;
    border-top: 1px solid #ccc;
}

.posts .post:last-child {
    margin-top: auto;
}

.posts .post {
    width: calc(100% - 20px);
    overflow-x: auto;
    padding: 5px 10px;
    border-top: 1px solid #ccc;
    flex-shrink: 0;
}

.posts .post:nth-child(odd) {
    background: #f5f5f5;
}

.post_header {
    position: relative;
    height: 22px;
    padding: 0 0 2px 23px;
}

.post_header a {
    cursor: pointer;
}

.post_header img {
    position: absolute;
    top: 0;
    left: 0;
    object-fit: cover;
    border-radius: 3px;
    width: 18px;
    height: 18px;
}

.post_header .time {
    font-weight: normal;
    font-size: 11px;
    color: #888;
}

.post_header button {
    cursor: pointer;
    margin-left: 5px;
    padding: 1px 5px;
}

.post_header button svg {
    margin-bottom: -2px;
}

.sender {
    height: 39px;
    border-top: 1px solid #555;
}

.sender fieldset {
    border: none;
    margin: 0;
    padding: 0;
}

.sender input[type=text] {
    height: 30px;
    width: calc(100% - 70px);
    padding: 2px 10px;
    border-radius: 0;
    outline: none;
    border: none;
}

.sender input[type=submit] {
    height: 39px;
    width: 50px;
    padding: 10px;
}

